frontend/src/components/cards/PatientCard.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Open+Sans:wght@400;700&display=swap");

.pet-card {
  display: grid;
  width: 100%;
  height: 300px;
  grid-template-columns: 13rem 1fr;
  gap: 1rem;
  background: white;
  margin: 1.5rem 0rem;
  align-items: stretch;
  /* padding-bottom: 20px; */
}

/*LEFT OF CARD*/
.pet-card-left {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.pet-img {
  max-width: 170px;
  width: 100%;
  aspect-ratio: 1 / 1; /* make image square */
  height: auto;
  object-fit: cover;
  display: block;
  border-radius: 20px;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.pet-name {
  color: #1f3a5f;
  font-size: 1.5rem;
  font-weight: bold;
  font-family:
    Open Sans,
    sans-serif;
}

/*RIGHT OF CARD*/
.pet-card-right {
  display: grid;
  grid-template-rows: auto 1fr auto;
}

.pet-card-right h6 {
  justify-self: start;
  text-align: left;
  font-family:
    Open Sans,
    sans-serif;
  color: #1f3a5f;
  font-weight: bold;
  margin-top: 1rem;
}

.pet-info-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 55px);
  gap: 1rem 2rem;
  outline: #333333;
  justify-items: left;
  align-self: center;
}

.pet-info-group {
  text-align: left;
}

.pet-info-title {
  font-size: 0.9rem;
  font-family:
    Open Sans,
    sans-serif;
  color: #1f3a5f;
  text-transform: uppercase;
  font-weight: bold;
  margin: 0.3rem 0rem;
}

.pet-info-input {
  font-size: 0.9rem;
  font-family:
    Open Sans,
    sans-serif;
  color: #333333;
  margin: 0;
}

/*PET CARD FOOTER*/
.pet-card-footer {
  display: flex;
  flex-direction: row;
  padding-top: 20px;
  padding-bottom: 20px;
}

.notes-label {
  display: flex;
  gap: 10px;
  font-family:
    Open Sans,
    sans-serif;
}

.pet-card-actions {
  display: flex;
  gap: 10px;
  margin-left: auto;
}

.patient-card-footer {
  display: flex;
  align-items: center;
  gap: 10px;
}

.pet-card-footer button {
  border-radius: 10px;
  border: none;
  font-size: 0.93rem;
  width: 5rem;
  font-weight: bold;
  /* padding: 0.3rem; */
}

/*'SEE NOTES' POPOVER*/

.popover-header.popover-header {
  background-color: #e8eaee;
  color: #1f3a5f;
  font-weight: bold;
}

.patient-card-footer .notes-label .btn.btn-primary.popover-buttons {
  background-color: #e8eaee !important;
  color: #1f3a5f !important;
  font-weight: bold;
  white-space: nowrap;
  width: auto;
  min-width: fit-content;
  height: 35px;
  padding: 0.35rem 0.75rem;
  border-radius: 20px;
  border: 3px solid #e8eaee
}

.notes-label .btn.btn-primary.popover-buttons:hover {
  border: 3px solid #a5aebd !important;
  background-color: #a5aebd !important;
}

.popover-body.popover-body {
  font-family:
    Open Sans,
    sans-serif;
  color: #333333;
}

